--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,6 +16,6 @@ proto.workspace = true
 async-trait.workspace = true
 zstd.workspace = true
 tracing.workspace = true
-clap = "4.5.0"
-itertools = "0.12.1"
-futures = "0.3.30"
+itertools.workspace = true
+clap.workspace = true
+futures.workspace = true
