--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -11,6 +11,7 @@ anyhow.workspace = true
 async-trait.workspace = true
 blake3.workspace = true
 digest.workspace = true
+clap.workspace = true
 jj-lib-proc-macros.workspace = true
 jj-lib.workspace = true
 nfsserve.workspace = true
@@ -18,6 +19,8 @@ parking_lot.workspace = true
 prost.workspace = true
 proto = { path = "../proto" }
 rand.workspace = true
+serde.workspace = true
+toml.workspace = true
 tokio-stream.workspace = true
 tokio.workspace = true
 tonic-reflection.workspace = true
