--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,12 @@ documentation = "https://thelastyak.com/cultivate"
 
 [workspace.dependencies]
 anyhow = "1"
+assert_cmd = "2.0.8"
+assert_matches = "1.5.0"
 async-trait = "0.1.83"
 blake3 = { version = "1.5.4", features = ["traits-preview"] }
 clap = { version = "4.5.0", features = ["derive"] }
+chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
 digest = "0.10"
 futures = "0.3.30"
 itertools = "0.12.1"
@@ -24,6 +27,7 @@ parking_lot = "0.12.3"
 prost = "0.12"
 proto = { path = "./proto" }
 rand = "0.8.5"
+regex = "1.11.1"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1.14"
